samples/_failures_safe/1761439282_489476_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6dd0151d.c: In function ‘free_graph’:
./samples/SAFE/__tmp_6dd0151d.c:165:16: error: expected ‘]’ at end of input
  165 |         graph[i
      |                ^
      |                ]
./samples/SAFE/__tmp_6dd0151d.c:165:9: error: expected declaration or statement at end of input
  165 |         graph[i
      |         ^~~~~
./samples/SAFE/__tmp_6dd0151d.c:165:9: error: expected declaration or statement at end of input
